--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -1,65 +1,92 @@
-name: Dependencies
+name: Security Scan
 
 on:
-  schedule:
-    - cron: '0 0 * * 0'  # Weekly on Sunday at midnight
-  workflow_dispatch:  # Allow manual triggering
   push:
-    branches:
-      - main
-    paths:
-      - 'python/requirements.txt'
-      - 'java/pom.xml'
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: '0 2 * * *'
 
 jobs:
-  update-dependencies:
+  dependency-check:
     runs-on: ubuntu-latest
-    if: github.event_name != 'push' || github.repository_owner != 'dependabot[bot]'
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
+    
+    - name: Python Security Scan
+      working-directory: ./python
+      run: |
+        echo "🔍 Checking Python dependencies for security vulnerabilities..."
+        # Install safety if not present
+        pip install safety
+        
+        # Check for vulnerabilities
+        if [ -f "requirements.txt" ]; then
+          safety check -r requirements.txt --output text || true
+        else
+          echo "⚠️  requirements.txt not found"
+        fi
+    
+    - name: Install Java Dependency-Check
+      working-directory: ./java
+      run: |
+        echo "📦 Installing OWASP Dependency-Check..."
+        # Download and install dependency-check
+        wget -q -O dependency-check.zip https://github.com/jeremylong/DependencyCheck/releases/download/v8.3.1/dependency-check-8.3.1-release.zip
+        unzip -q dependency-check.zip
+        rm dependency-check.zip
+        
+        # Create reports directory
+        mkdir -p reports
+    
+    - name: Run Java Dependency Check
+      working-directory: ./java
+      run: |
+        echo "🔍 Scanning Java dependencies..."
+        ./dependency-check/bin/dependency-check.sh \
+          --project "minecraft-server-utility" \
+          --scan "." \
+          --out "./reports" \
+          --format "HTML" \
+          --format "JSON" \
+          --failOnCVSS 9 \
+          --enableExperimental || true
+        
+        echo "✅ Dependency check completed"
+    
+    - name: Upload Security Report
+      if: always()
+      uses: actions/upload-artifact@v3
       with:
-        fetch-depth: 0
-        token: ${{ secrets.GITHUB_TOKEN }}
+        name: security-reports-${{ github.sha }}
+        path: |
+          java/reports/
+        retention-days: 7
+
+  snyk-security:
+    runs-on: ubuntu-latest
+    continue-on-error: true  # Don't fail the workflow if Snyk fails
+    
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v4
     
     - name: Setup Python
       uses: actions/setup-python@v4
       with:
         python-version: '3.9'
     
-    - name: Update Python dependencies
-      working-directory: ./python
-      run: |
-        # Create requirements.in if it doesn't exist
-        if [ ! -f "requirements.in" ]; then
-          echo "requests>=2.25.0" > requirements.in
-        fi
-        
-        # Install pip-tools
-        pip install pip-tools
-        
-        # Update requirements.txt
-        pip-compile --upgrade requirements.in -o requirements.txt
-        
-        # Also update dev requirements
-        if [ -f "requirements-dev.in" ]; then
-          pip-compile --upgrade requirements-dev.in -o requirements-dev.txt
-        fi
-        
-        echo "✅ Python dependencies updated"
-        
-    - name: Check for Python dependency changes
-      id: py-changes
-      working-directory: ./python
-      run: |
-        if git diff --exit-code requirements.txt; then
-          echo "No Python dependency changes"
-          echo "has_changes=false" >> $GITHUB_OUTPUT
-        else
-          echo "Python dependencies have changed"
-          echo "has_changes=true" >> $GITHUB_OUTPUT
-        fi
+    - name: Run Snyk for Python
+      if: ${{ secrets.SNYK_TOKEN != '' }}
+      uses: snyk/actions/python@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        args: --severity-threshold=high --fail-on=upgradable
+      continue-on-error: true
     
     - name: Setup Java
       uses: actions/setup-java@v3
@@ -67,88 +94,20 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
     
-    - name: Update Java dependencies with Maven
-      working-directory: ./java
-      run: |
-        # Backup original pom.xml
-        cp pom.xml pom.xml.backup
-        
-        # Update dependencies using versions-maven-plugin
-        mvn versions:use-latest-versions \
-          -DgenerateBackupPoms=false \
-          -DexcludeReactor=true \
-          -DprocessDependencyManagement=true \
-          -Dincludes="org.json:json"
-        
-        echo "✅ Java dependencies updated"
-        
-    - name: Check for Java dependency changes
-      id: java-changes
-      working-directory: ./java
-      run: |
-        if git diff --exit-code pom.xml; then
-          echo "No Java dependency changes"
-          echo "has_changes=false" >> $GITHUB_OUTPUT
-        else
-          echo "Java dependencies have changed"
-          echo "has_changes=true" >> $GITHUB_OUTPUT
-        fi
-    
-    - name: Commit and create PR if changes exist
-      if: steps.py-changes.outputs.has_changes == 'true' || steps.java-changes.outputs.has_changes == 'true'
-      run: |
-        # Configure git
-        git config --global user.name "GitHub Actions"
-        git config --global user.email "actions@github.com"
-        
-        # Create branch name with timestamp
-        BRANCH_NAME="deps/update-$(date +%Y%m%d-%H%M%S)"
-        
-        # Create and switch to branch
-        git checkout -b "$BRANCH_NAME"
-        
-        # Add changes
-        git add python/requirements.txt java/pom.xml
-        
-        # Commit changes
-        git commit -m "chore(deps): update dependencies
-        
-        - Update Python dependencies
-        - Update Java dependencies"
-        
-        # Push to remote
-        git push origin "$BRANCH_NAME"
-        
-        echo "✅ Changes pushed to branch: $BRANCH_NAME"
-        
-    - name: Create Pull Request
-      if: steps.py-changes.outputs.has_changes == 'true' || steps.java-changes.outputs.has_changes == 'true'
-      uses: peter-evans/create-pull-request@v5
+    - name: Run Snyk for Java
+      if: ${{ secrets.SNYK_TOKEN != '' }}
+      uses: snyk/actions/maven@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: "chore(deps): update dependencies"
-        title: "📦 Dependency updates"
-        body: |
-          ## Dependency Updates
-          
-          This PR updates the project dependencies to their latest versions.
-          
-          ### Changes:
-          - Updated Python dependencies in `requirements.txt`
-          - Updated Java dependencies in `pom.xml`
-          
-          ### How to review:
-          1. Check that all tests pass
-          2. Verify compatibility with existing code
-          3. Ensure no breaking changes
-          
-          **Automatically generated by GitHub Actions**
-        labels: "dependencies, automated-pr"
-        branch: "dependencies-update"
-        delete-branch: true
-        draft: false
+        args: --severity-threshold=high --fail-on=upgradable
+      continue-on-error: true
     
-    - name: No changes needed
-      if: steps.py-changes.outputs.has_changes == 'false' && steps.java-changes.outputs.has_changes == 'false'
-      run: |
-        echo "✅ No dependency updates needed"
+    - name: Snyk Monitor
+      if: ${{ secrets.SNYK_TOKEN != '' }}
+      uses: snyk/actions/maven@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        command: monitor
+      continue-on-error: true
