--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,79 +1,73 @@
-  # Java Package CI
-  java-ci:
+  # Python Package CI
+  python-ci:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [8, 11, 17]
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
     
     defaults:
       run:
-        working-directory: ./java
+        working-directory: ./python
     
     steps:
     - name: Checkout repository
       uses: actions/checkout@v4
     
-    - name: Set up JDK ${{ matrix.java-version }}
-      uses: actions/setup-java@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
       with:
-        java-version: ${{ matrix.java-version }}
-        distribution: 'temurin'
+        python-version: ${{ matrix.python-version }}
     
-    - name: Cache Maven dependencies
-      uses: actions/cache@v3
-      with:
-        path: ~/.m2
-        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-        restore-keys: ${{ runner.os }}-m2
-    
-    - name: Build with Maven
-      run: mvn clean compile -DskipTests
-    
-    - name: Run tests
-      run: mvn test
-    
-    - name: Package JAR
-      run: mvn package -DskipTests
-    
-    - name: Verify package
+    - name: Install package in development mode
       run: |
-        if [ -f "target/minecraft-server-utility-1.0.0.jar" ]; then
-          echo "✅ JAR file created successfully"
-          ls -la target/*.jar
-        else
-          echo "❌ JAR file not found"
-          ls -la target/
+        python -m pip install --upgrade pip
+        pip install -e .
+    
+    - name: Install test dependencies
+      run: |
+        pip install pytest pytest-cov pytest-mock requests
+    
+    - name: Lint with flake8
+      run: |
+        pip install flake8
+        # Only check for critical errors
+        flake8 minecraft_server_utility --count --select=E9,F63,F7,F82 --show-source --statistics || true
+    
+    - name: Run tests with pytest
+      run: |
+        # Create test directory if it doesn't exist
+        mkdir -p tests
+        
+        # Run tests
+        python -m pytest tests/ -v --cov=minecraft_server_utility --cov-report=term --cov-report=xml
+    
+    - name: Run basic import test
+      run: |
+        python -c "
+from minecraft_server_utility import ServerPinger, MojangAPI
+print('✅ Import successful!')
+print(f'ServerPinger: {ServerPinger}')
+print(f'MojangAPI: {MojangAPI}')
+        "
+    
+    - name: Build Python package
+      run: |
+        pip install build
+        python -m build
+    
+    - name: Verify package build
+      run: |
+        ls -la dist/
+        if [ -f "dist/minecraft_server_utility-1.0.0-py3-none-any.whl" ]; then
+          echo "✅ Wheel file created successfully"
+        fi
+        if [ -f "dist/minecraft-server-utility-1.0.0.tar.gz" ]; then
+          echo "✅ Source distribution created successfully"
         fi
     
-    - name: Upload Java artifacts
+    - name: Upload Python artifacts
+      if: success()
       uses: actions/upload-artifact@v3
       with:
-        name: java-package-jdk-${{ matrix.java-version }}
-        path: ./java/target/*.jar
-    
-    # Only deploy on main branch and release events
-    - name: Deploy to GitHub Packages
-      if: github.ref == 'refs/heads/main' && matrix.java-version == 11
-      run: |
-        # Create minimal pom.xml for deployment
-        cat > pom-deploy.xml << 'EOF'
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
-         http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>com.minecraftutility</groupId>
-    <artifactId>minecraft-server-utility</artifactId>
-    <version>1.0.0</version>
-    <packaging>jar</packaging>
-</project>
-EOF
-        
-        echo "📦 Skipping GitHub Packages deployment for now"
-        # mvn deploy:deploy-file \
-        #   -Dfile=target/minecraft-server-utility-1.0.0.jar \
-        #   -DpomFile=pom-deploy.xml \
-        #   -DrepositoryId=github \
-        #   -Durl=https://maven.pkg.github.com/${{ github.repository }} \
-        #   -Dtoken=${{ secrets.GITHUB_TOKEN }}
+        name: python-package-${{ matrix.python-version }}
+        path: ./python/dist/
