--- a/.github/workflows/publish-pypi.yml
+++ b/.github/workflows/publish-pypi.yml
@@ -3,67 +3,102 @@ name: Publish to PyPI
 on:
   release:
     types: [published]
-  workflow_dispatch:
+  workflow_dispatch:  # Allow manual trigger
 
 jobs:
-  test-pypi-publish:
-    name: Publish to TestPyPI
+  build-and-publish:
     runs-on: ubuntu-latest
-    if: github.event_name == 'workflow_dispatch'
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: "3.10"
-    
-    - name: Install build tools
-      run: |
-        python -m pip install --upgrade pip
-        pip install build twine
-    
-    - name: Build package
-      working-directory: ./python
-      run: python -m build
-    
-    - name: Publish to TestPyPI
-      uses: pypa/gh-action-pypi-publish@release/v1
-      with:
-        repository-url: https://test.pypi.org/legacy/
-        packages-dir: ./python/dist/
-      env:
-        TWINE_USERNAME: __token__
-        TWINE_PASSWORD: ${{ secrets.TEST_PYPI_API_TOKEN }}
-
-  pypi-publish:
-    name: Publish to PyPI
-    runs-on: ubuntu-latest
-    environment: pypi  # Protected environment
     permissions:
-      id-token: write  # For trusted publishing (recommended)
+      contents: read
+      id-token: write  # REQUIRED for PyPI trusted publishing
     
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     
     - name: Set up Python
       uses: actions/setup-python@v4
       with:
         python-version: "3.10"
     
-    - name: Install build tools
+    - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install build twine
+        pip install build
+    
+    - name: Verify directory structure
+      run: |
+        echo "📁 Current directory structure:"
+        pwd
+        ls -la
+        
+        echo -e "\n📁 Python directory:"
+        ls -la python/
+        
+        echo -e "\n📄 Checking required files:"
+        [ -f "python/setup.py" ] && echo "✅ python/setup.py exists" || echo "❌ python/setup.py missing"
+        [ -f "python/README.md" ] && echo "✅ python/README.md exists" || echo "❌ python/README.md missing"
+        [ -f "python/minecraft_server_utility/__init__.py" ] && echo "✅ __init__.py exists" || echo "❌ __init__.py missing"
+        
+        echo -e "\n📦 Package metadata:"
+        cd python
+        python -c "
+try:
+    from minecraft_server_utility import __version__
+    print(f'✅ Package version: {__version__}')
+except ImportError as e:
+    print(f'❌ Import error: {e}')
+        "
     
     - name: Build package
       working-directory: ./python
-      run: python -m build
+      run: |
+        echo "🔨 Building package..."
+        python -m build
+        
+        echo -e "\n📦 Build output:"
+        ls -la dist/
+        echo -e "\n📄 Package contents:"
+        tar -tzf dist/*.tar.gz | head -20
     
-    - name: Publish to PyPI using Trusted Publishing
+    - name: Verify package with twine
+      working-directory: ./python
+      run: |
+        pip install twine
+        python -m twine check dist/*
+        echo "✅ Package verification passed"
+    
+    - name: Publish to PyPI
+      if: success()
       uses: pypa/gh-action-pypi-publish@release/v1
       with:
         packages-dir: ./python/dist/
+    
+    - name: Verify publication
+      if: success()
+      run: |
+        echo "⏳ Waiting for PyPI to index the package..."
+        sleep 30
+        
+        VERSION=$(cd python && python -c "from minecraft_server_utility import __version__; print(__version__)")
+        PACKAGE_NAME="minecraft-server-utility"
+        
+        echo "🔍 Checking if package is on PyPI..."
+        echo "Package: $PACKAGE_NAME"
+        echo "Version: $VERSION"
+        
+        # Try to check via PyPI API
+        curl -s "https://pypi.org/pypi/$PACKAGE_NAME/$VERSION/json" | \
+          jq -r '.info.version + " is available on PyPI!"' 2>/dev/null || \
+          echo "⚠️  Package might not be indexed yet. Check manually at:"
+        echo "🌐 https://pypi.org/project/$PACKAGE_NAME/"
+    
+    - name: Notify on success
+      if: success()
+      run: |
+        echo "🎉 Successfully published to PyPI!"
+        echo "📦 Package: minecraft-server-utility"
+        echo "🏷️  Version: $(cd python && python -c "from minecraft_server_utility import __version__; print(__version__)")"
+        echo "🔗 URL: https://pypi.org/project/minecraft-server-utility/"
